fix: fixes Ui disappear issue on mobile mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -335,11 +335,6 @@ p {
   .glow {
     display: none;
   }
-
-  .crt_effect {
-    display: none;
-  }
-
   .header {
     left: 19px;
     right: 19px;
